--- a/data visual/test/style.css
+++ b/data visual/test/style.css
@@ -10,6 +10,10 @@ p {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
 #header {
     background-color:black;
     color:white;
