updated style in JS and CSS to make colored borders appear on each node representing its relative score.

--- a/OrgChart/style.css
+++ b/OrgChart/style.css
@@ -34,9 +34,11 @@ body {
     float:left;
     padding:10px; 
 }
-#gauge_div {
-    padding-left: 36%;
-    padding-right: auto;
+#text {
+    text-align: center;
+    width:900px;
+    float:left;
+    padding:10px; 
 }
 #footer {
     background-color:black;
